# ai-quest

./: .gitignore  LICENSE  README.md
src/: TODO.md
src/ai-quest-api/: .Dockerignore  Dockerfile  TODO.md  build-run-local.sh  ecr-build-push.sh  example.env  local.Dockerfile  pyproject.toml  requirements.txt
src/ai-quest-api/app/: TODO.md  lambda_handler.py  main.py
src/ai-quest-api/app/clients/: config.py  db_client.py  llm_client.py  token_tracker.py
src/ai-quest-api/app/entities/: chapter.py  message.py  story.py  user.py
src/ai-quest-api/app/repositories/: chapter.py  message.py  story.py  user.py
src/ai-quest-api/app/schemas/: message.py  story.py  user_decision.py
src/ai-quest-api/app/services/: chapter_summarization.py  dm.py  prompt_provider.py  security.py  story.py  story_context.py  translator.py  user.py
src/ai-quest-api/app/services/memory/: aws_memory_store.py  i_memory_store.py
src/ai-quest-api/app/static/prompts/: dm_summarize.txt  system.txt
src/ai-quest-api/app/static/prompts/de/: 1st_user_message.txt  default.txt  dm_summarize.txt  dungeon_master.txt
src/ai-quest-api/app/static/prompts/en/: default.txt  dungeon_master.txt
src/ai-quest-api/app/static/prompts/ua/: 1st_user_message.txt  default.txt  dm_summarize.txt  dungeon_master.txt
src/ai-quest-api/app/static/scripts/: init.sql
src/ai-quest-api/app/translations/: chapter_summarization.json  de.json  dungeon_master.json  en.json  story_context.json  ua.json
src/ai-quest-api/public/: index.html  instructions.md  run_client.sh
src/ai-quest-api/tests/: test_placeholder.py
(+109 files in other folders)
