[tool.poetry]
name = "app"
version = "0.0.1"
description = "AI Quest API"
authors = ["jokersoft"]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
python-dotenv = "^1.0.1"
fastapi = "^0.115.5"
mangum = "^0.19.0"
pydantic = "^2.10.2"
anthropic = "^0.40.0"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
