[tool.poetry]
name = "app"
version = "0.0.3"
description = "AI Quest API"
authors = ["jokersoft"]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
python-dotenv = "^1.0.1"
fastapi = "^0.115.12"
mangum = "^0.19.0"
pydantic = "^2.11.4"
anthropic = "^0.52.0"
sqlalchemy = "^2.0.40"
pymysql = "^1.1.1"
boto3 = "^1.40.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
